# casino-demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: animatedsprite.cpp  animatedsprite.h  background.cpp  background.h  button.cpp  button.h  car.cpp  car.h  coins.cpp  coins.h  creditsInButton.cpp  creditsInButton.h  creditsOutButton.cpp  creditsOutButton.h  fonts.cpp  fonts.h  game.cpp  game.h  globals.h  graphics.cpp  graphics.h  main.cpp  playButton.cpp  playButton.h  sprite.cpp  sprite.h  sprites.cpp  sprites.h  startButton.cpp  startButton.h
src/ui/: button.cpp  button.h
